--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -144,7 +144,7 @@
         </div>
         <!-- Example DataTable for Dashboard Demo-->
         <div class="card mb-4 card-header-actions">
-            <div class="card-header">Personnel Management</div>
+            <div class="card-header">Personnal Management</div>
             <div class="card-body">
                 <table id="datatablesSimple">
                     <thead>
