--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -5,7 +5,7 @@
         <app-sidebar></app-sidebar>
     </div>
     <div id="layoutSidenav_content">
-        <app-dashboard></app-dashboard>
+        <router-outlet></router-outlet>
         <app-footer></app-footer>
     </div>
 </div>
